fix old objects links

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -40,7 +40,7 @@ layout: page
     <div class="card mb-3">
       <div class="card-body">
           <h4 class="card-title">IWI currently contains <a href="{{ '/browse.html' | relative_url }}">{{ site.data.iwi | size }} profiles of Idaho women</a>.</h4>
-          <img src="https://www.lib.uidaho.edu/digital/objects/iwi/iwi_logo.jpg" class="img-fluid">
+          <img src="https://objects.lib.uidaho.edu/iwi/iwi_logo.jpg" class="img-fluid">
       </div>
     </div>
 
